Various bug fixes (bug#30276). Added support for new syntax: ALTER TABLE ... [ONLINE [ONLY] | OFFLINE [ONLY]]; CREATE INDEX ... [ONLINE [ONLY] | OFFLINE [ONLY]]; DROP INDEX ... [ONLINE [ONLY] | OFFLINE [ONLY]];