sql/sql_lex.h
@@ -813,7 +813,7 @@ inline bool st_select_lex_unit::is_union ()
 #define ALTER_RENAME		(1L << 8)
 #define ALTER_ORDER		(1L << 9)
 #define ALTER_OPTIONS		(1L << 10)
-#define ALTER_CHANGE_COLUMN_DEFAULT (1L << 11)
+#define ALTER_COLUMN_DEFAULT    (1L << 11)
 #define ALTER_KEYS_ONOFF        (1L << 12)
 #define ALTER_STORAGE	        (1L << 13)
 #define ALTER_ROW_FORMAT        (1L << 14)
@@ -835,6 +835,10 @@ inline bool st_select_lex_unit::is_union ()
 #define ALTER_REMOVE_PARTITIONING (1L << 30)
 #define ALTER_FOREIGN_KEY         (1L << 31)
 
+enum enum_build_method { BUILD_METHOD_DEFAULT, 
+                         BUILD_METHOD_ONLINE,
+                         BUILD_METHOD_OFFLINE };
+
 typedef struct st_alter_info
 {
   List<Alter_drop>            drop_list;
@@ -844,6 +848,7 @@ typedef struct st_alter_info
   enum tablespace_op_type     tablespace_op;
   List<char>                  partition_names;
   uint                        no_parts;
+  enum enum_build_method      build_method;
 
   st_alter_info(){clear();}
   void clear()
@@ -852,6 +857,7 @@ typedef struct st_alter_info
     tablespace_op= NO_TABLESPACE_OP;
     no_parts= 0;
     partition_names.empty();
+    build_method= BUILD_METHOD_DEFAULT;
   }
   void reset(){drop_list.empty();alter_list.empty();clear();}
 } ALTER_INFO;
